# Project

./: .gitignore
ANIMATION_PROJECT/: .cproject  .project  Blending.cpp  Makefile  Makefile2  MotionCalc.cpp  MotionCalc.h  TABLE  animation2  game.cpp  game.h  imgui.ini  main.cpp  trackballGUI.cpp
ANIMATION_PROJECT/Luis/: Body_structure.cpp  Body_structure.h  IKsolver.cpp  Makefile  Read_BVH.cpp  animation  camera.cpp  camera.h  trackball.cpp
Anima3/: Body_structure.cpp
Anima3/BVH_folder/: composite_temp.bvh  smash_temp.bvh  taekwondo2_temp.bvh
Anima3/Debug/: makefile
BVH paser & motion player/: Body_structure.cpp  Body_structure.h  Makefile  Read_BVH.cpp  animation  trackball.cpp
BVH paser & motion player/BVH_folder/: magic_temp.bvh
Deep Learning_텐서플로우 사용법/tensorFlow/: pip 다운 후 사용법.odt
IKsolver/: Body_structure.h  IKsolver.cpp  Read_BVH.cpp  camera.cpp  camera.h  trackball.cpp
IKsolver/BVH_folder/: Trial001.bvh  drum_temp.bvh
OpenGL_vbo(contain all kinds of shader)/: OpenGL.sln
OpenGL_vbo(contain all kinds of shader)/OpenGL/: Geometry.cpp  Geometry.h  OpenGL.vcxproj  OpenGL.vcxproj.filters  camera.cpp  glslShader.cpp  glslShader.h  main.cpp  shaders.tcs  trackball.cpp
Rendering Assignment 1 (picking)/: CMakeLists.txt
Rendering Assignment 1 (picking)/include/: Geometry.h  glslShader.h  picking.h
Rendering Assignment 1 (picking)/src/: Geometry.cpp  camera.cpp  glslShader.cpp  main.cpp  picking.cpp
Rendering Assignment 2 (FBO)/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Rendering.sln  Rendering.vcxproj  Rendering.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Rendering Assignment 2 (FBO)/src/: main.cpp
Rendering Assignment 3 (render to texture)/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  Rendering  cmake_install.cmake  imgui.ini
Rendering Assignment 3 (render to texture)/include/: Geometry.h  main_etc.h  picking.h  render2texture.h
Rendering Assignment 3 (render to texture)/shader/120version/: 120.frag  120.vert
Rendering Assignment 3 (render to texture)/shader/phong_shader/: shaders.tcs  shaders.tes
Rendering Assignment 3 (render to texture)/shader/sphere_shader/: tes_shader.fs  tes_shader.gs
Rendering Assignment 3 (render to texture)/src/: Geometry.cpp  main.cpp  main_.cpp  picking.cpp  render2texture.cpp
Rendering_Project_완성/: CMakeLists.txt
Rendering_Project_완성/include/: Geometry.h  imgui_internal.h  (+3 more)
TrackBall/: Body_structure.cpp  Body_structure.h  Makefile  TT  camera.cpp  trackball.cpp
애니메이션 발표/: Advanced Computer Animation Term Project.pptx
(+133 files in other folders)
